--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         "module": "commonjs",
+	"experimentalDecorators": true,
         "target": "ES6",
         "jsx":"react",
         "allowSyntheticDefaultImports": true,
