--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "scripts": {
-    "dev": "webpack-dev-server --config config/webpack/webpack.dev.config.js --open",
+    "dev": "webpack-dev-server --config config/webpack/webpack.dev.config.js --open --colors",
     "build": "webpack --config config/webpack/webpack.prod.config.js --progress --colors "
   },
   "devDependencies": {
     "@babel/core": "^7.7.5",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
+    "@babel/plugin-proposal-optional-chaining": "^7.8.3",
     "@babel/preset-env": "^7.7.6",
     "@babel/preset-react": "^7.7.4",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
+    "@types/webpack-env": "^1.15.0",
     "@typescript-eslint/eslint-plugin": "^2.12.0",
     "@typescript-eslint/parser": "^2.12.0",
     "babel-loader": "^8.0.6",
