--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.0",
     "eslint": "^6.7.2",
+    "file-loader": "^6.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "less-loader": "^6.2.0",
+    "style-loader": "^1.2.1",
     "terser-webpack-plugin": "^2.3.1",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
+    "url-loader": "^4.1.0",
     "webpack": "^4.41.3",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.0",
