--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
     "compilerOptions": {
         "module": "commonjs",
-	"experimentalDecorators": true,
-        "target": "ES6",
-        "jsx":"react",
-        "allowSyntheticDefaultImports": true,
+        "lib": ["es2017","es6","dom"],
+        "experimentalDecorators": true,
+            "target": "ES6",
+            "jsx":"react",
+            "allowSyntheticDefaultImports": true,
+        
     },
     "include": [
         "**/*"
