--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^4.1.0",
     "webpack": "^4.41.3",
+    "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.0",
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "antd": "^4.5.1",
     "glob": "^7.1.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
