--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.0",
     "eslint": "^6.7.2",
-    "file-loader": "^6.0.0",
     "html-webpack-plugin": "^3.2.0",
     "less-loader": "^6.2.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "style-loader": "^1.2.1",
     "terser-webpack-plugin": "^2.3.1",
     "ts-loader": "^6.2.1",
