--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "html-webpack-plugin": "^3.2.0",
     "less-loader": "^6.2.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "style-loader": "^1.2.1",
     "terser-webpack-plugin": "^2.3.1",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.3",
@@ -33,8 +34,9 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
-    "antd": "^4.5.1",
+    "antd": "^4.5.2",
     "glob": "^7.1.6",
+    "happypack": "^5.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   }
