--- a/package.json
+++ b/package.json
@@ -36,8 +36,6 @@
   "dependencies": {
     "antd": "^4.5.2",
     "glob": "^7.1.6",
-    "happypack": "^5.0.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "happypack": "^5.0.1"
   }
 }
