--- a/package.json
+++ b/package.json
@@ -2,14 +2,20 @@
   "scripts": {
     "dev": "webpack-dev-server --config config/webpack/webpack.dev.config.js --open --colors",
     "build": "webpack --config config/webpack/webpack.prod.config.js --progress --colors",
-    "dev-ip": "webpack-dev-server --config config/webpack/webpack.dev.config.js --open --colors --host 0.0.0.0 --useLocalIp"
+    "dev-ip": "webpack-dev-server --config config/webpack/webpack.dev.config.js --open --colors --host 0.0.0.0 --useLocalIp",
+    "build:server": "webpack --config config/webpack/webpack.server.config.js --progress --colors",
+    "build:client": "webpack --config config/webpack/webpack.base.config.js --progress --colors --mode=development",
+    "dev:ssr": "npm run build:server && npm run build:client && node build/server/server.bundle.js "
   },
   "devDependencies": {
     "@babel/core": "^7.7.5",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
     "@babel/plugin-proposal-optional-chaining": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.7.6",
     "@babel/preset-react": "^7.7.4",
+    "@babel/register": "^7.12.10",
+    "@babel/runtime": "^7.12.5",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
     "@types/webpack-env": "^1.15.0",
@@ -19,7 +25,9 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.0",
     "eslint": "^6.7.2",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "ignore-loader": "^0.1.2",
     "less-loader": "^6.2.0",
     "mini-css-extract-plugin": "^0.9.0",
     "terser-webpack-plugin": "^2.3.1",
@@ -33,6 +41,15 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
-    "glob": "^7.1.6"
+    "@babel/polyfill": "^7.12.1",
+    "axios": "^0.21.1",
+    "glob": "^7.1.6",
+    "koa": "^2.13.1",
+    "koa-router": "^10.0.0",
+    "koa-static": "^5.0.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0"
   }
 }
