--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@babel/core": "^7.7.5",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
     "@babel/plugin-proposal-optional-chaining": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.7.6",
     "@babel/preset-react": "^7.7.4",
+    "@babel/preset-typescript": "^7.12.7",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
     "@types/webpack-env": "^1.15.0",
@@ -33,6 +35,8 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
-    "glob": "^7.1.6"
+    "glob": "^7.1.6",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   }
 }
