--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "axios": "^0.21.1",
+    "core-js": "^3.8.3",
     "glob": "^7.1.6",
     "koa": "^2.13.1",
     "koa-router": "^10.0.0",
