--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "rexos": "^2.0.0"
   }
 }
