--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev-ip": "webpack-dev-server --config config/webpack/webpack.dev.config.js --open --colors --host 0.0.0.0 --useLocalIp",
     "build:server:dev": "webpack --watch --config config/webpack/webpack.server.config.js --progress --colors --mode=development",
     "build:client:dev": "webpack --config config/webpack/webpack.base.config.js --progress --colors --mode=development",
-    "dev:ssr": "node ssr_run.js"
+    "dev:ssr": "node config/webpack/scripts/dev-runner.js"
   },
   "devDependencies": {
     "@babel/core": "^7.7.5",
@@ -23,6 +23,7 @@
     "@typescript-eslint/eslint-plugin": "^2.12.0",
     "@typescript-eslint/parser": "^2.12.0",
     "babel-loader": "^8.0.6",
+    "chalk": "^4.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.0",
     "eslint": "^6.7.2",
@@ -32,6 +33,7 @@
     "less-loader": "^6.2.0",
     "merge-stream": "^2.0.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "nodemon": "^2.0.7",
     "terser-webpack-plugin": "^2.3.1",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.3",
